pre-lunch productivity

--- a/bin-python.ipynb
+++ b/bin-python.ipynb
@@ -643,12 +643,530 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23766162",
+   "metadata": {},
+   "source": [
+    "https://blog.devgenius.io/download-and-analyze-crypto-market-data-with-python-c23941e475f"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28417765",
+   "execution_count": 1,
+   "id": "46ac07f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting yfinance\n",
+      "  Downloading yfinance-0.1.70-py2.py3-none-any.whl (26 kB)\n",
+      "Requirement already satisfied: numpy>=1.15 in /opt/anaconda3/lib/python3.9/site-packages (from yfinance) (1.20.3)\n",
+      "Requirement already satisfied: requests>=2.26 in /opt/anaconda3/lib/python3.9/site-packages (from yfinance) (2.26.0)\n",
+      "Requirement already satisfied: pandas>=0.24.0 in /opt/anaconda3/lib/python3.9/site-packages (from yfinance) (1.3.4)\n",
+      "Requirement already satisfied: lxml>=4.5.1 in /opt/anaconda3/lib/python3.9/site-packages (from yfinance) (4.6.3)\n",
+      "Collecting multitasking>=0.0.7\n",
+      "  Downloading multitasking-0.0.10.tar.gz (8.2 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/anaconda3/lib/python3.9/site-packages (from pandas>=0.24.0->yfinance) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/anaconda3/lib/python3.9/site-packages (from pandas>=0.24.0->yfinance) (2021.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas>=0.24.0->yfinance) (1.16.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.9/site-packages (from requests>=2.26->yfinance) (3.2)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/anaconda3/lib/python3.9/site-packages (from requests>=2.26->yfinance) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/anaconda3/lib/python3.9/site-packages (from requests>=2.26->yfinance) (1.26.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.9/site-packages (from requests>=2.26->yfinance) (2021.10.8)\n",
+      "Building wheels for collected packages: multitasking\n",
+      "  Building wheel for multitasking (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for multitasking: filename=multitasking-0.0.10-py3-none-any.whl size=8500 sha256=3a974f25d9b15e4707bc042296765abc5eb9d0c0dea9f432ab841c690e8552a0\n",
+      "  Stored in directory: /Users/ecuerbo/Library/Caches/pip/wheels/f2/b5/2c/59ba95dcf854e542944c75fe3da584e4e3833b319735a0546c\n",
+      "Successfully built multitasking\n",
+      "Installing collected packages: multitasking, yfinance\n",
+      "Successfully installed multitasking-0.0.10 yfinance-0.1.70\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install yfinance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d5ec5847",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#load required libraries\n",
+    "import pandas as pd\n",
+    "import yfinance as yf\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d21e7b8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  4 of 4 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Adj Close</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Close</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">High</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Low</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Open</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>BNB-USD</th>\n",
+       "      <th>BTC-USD</th>\n",
+       "      <th>ETH-USD</th>\n",
+       "      <th>XRP-USD</th>\n",
+       "      <th>BNB-USD</th>\n",
+       "      <th>BTC-USD</th>\n",
+       "      <th>ETH-USD</th>\n",
+       "      <th>XRP-USD</th>\n",
+       "      <th>BNB-USD</th>\n",
+       "      <th>BTC-USD</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ETH-USD</th>\n",
+       "      <th>XRP-USD</th>\n",
+       "      <th>BNB-USD</th>\n",
+       "      <th>BTC-USD</th>\n",
+       "      <th>ETH-USD</th>\n",
+       "      <th>XRP-USD</th>\n",
+       "      <th>BNB-USD</th>\n",
+       "      <th>BTC-USD</th>\n",
+       "      <th>ETH-USD</th>\n",
+       "      <th>XRP-USD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>13.727642</td>\n",
+       "      <td>7193.599121</td>\n",
+       "      <td>129.610855</td>\n",
+       "      <td>0.192894</td>\n",
+       "      <td>13.727642</td>\n",
+       "      <td>7193.599121</td>\n",
+       "      <td>129.610855</td>\n",
+       "      <td>0.192894</td>\n",
+       "      <td>14.095331</td>\n",
+       "      <td>7335.290039</td>\n",
+       "      <td>...</td>\n",
+       "      <td>128.798157</td>\n",
+       "      <td>0.189969</td>\n",
+       "      <td>13.952087</td>\n",
+       "      <td>7294.438965</td>\n",
+       "      <td>132.612274</td>\n",
+       "      <td>0.194518</td>\n",
+       "      <td>166278254</td>\n",
+       "      <td>21167946112</td>\n",
+       "      <td>8936866397</td>\n",
+       "      <td>1116761075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01</th>\n",
+       "      <td>13.689083</td>\n",
+       "      <td>7200.174316</td>\n",
+       "      <td>130.802002</td>\n",
+       "      <td>0.192667</td>\n",
+       "      <td>13.689083</td>\n",
+       "      <td>7200.174316</td>\n",
+       "      <td>130.802002</td>\n",
+       "      <td>0.192667</td>\n",
+       "      <td>13.873946</td>\n",
+       "      <td>7254.330566</td>\n",
+       "      <td>...</td>\n",
+       "      <td>129.198288</td>\n",
+       "      <td>0.192107</td>\n",
+       "      <td>13.730962</td>\n",
+       "      <td>7194.892090</td>\n",
+       "      <td>129.630661</td>\n",
+       "      <td>0.192912</td>\n",
+       "      <td>172980718</td>\n",
+       "      <td>18565664997</td>\n",
+       "      <td>7935230330</td>\n",
+       "      <td>1041134003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>13.027011</td>\n",
+       "      <td>6985.470215</td>\n",
+       "      <td>127.410179</td>\n",
+       "      <td>0.188043</td>\n",
+       "      <td>13.027011</td>\n",
+       "      <td>6985.470215</td>\n",
+       "      <td>127.410179</td>\n",
+       "      <td>0.188043</td>\n",
+       "      <td>13.715548</td>\n",
+       "      <td>7212.155273</td>\n",
+       "      <td>...</td>\n",
+       "      <td>126.954910</td>\n",
+       "      <td>0.186947</td>\n",
+       "      <td>13.698126</td>\n",
+       "      <td>7202.551270</td>\n",
+       "      <td>130.820038</td>\n",
+       "      <td>0.192708</td>\n",
+       "      <td>156376427</td>\n",
+       "      <td>20802083465</td>\n",
+       "      <td>8032709256</td>\n",
+       "      <td>1085351426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>13.660452</td>\n",
+       "      <td>7344.884277</td>\n",
+       "      <td>134.171707</td>\n",
+       "      <td>0.193521</td>\n",
+       "      <td>13.660452</td>\n",
+       "      <td>7344.884277</td>\n",
+       "      <td>134.171707</td>\n",
+       "      <td>0.193521</td>\n",
+       "      <td>13.763709</td>\n",
+       "      <td>7413.715332</td>\n",
+       "      <td>...</td>\n",
+       "      <td>126.490021</td>\n",
+       "      <td>0.185846</td>\n",
+       "      <td>13.035329</td>\n",
+       "      <td>6984.428711</td>\n",
+       "      <td>127.411263</td>\n",
+       "      <td>0.187948</td>\n",
+       "      <td>173683857</td>\n",
+       "      <td>28111481032</td>\n",
+       "      <td>10476845358</td>\n",
+       "      <td>1270017043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-04</th>\n",
+       "      <td>13.891512</td>\n",
+       "      <td>7410.656738</td>\n",
+       "      <td>135.069366</td>\n",
+       "      <td>0.194355</td>\n",
+       "      <td>13.891512</td>\n",
+       "      <td>7410.656738</td>\n",
+       "      <td>135.069366</td>\n",
+       "      <td>0.194355</td>\n",
+       "      <td>13.921914</td>\n",
+       "      <td>7427.385742</td>\n",
+       "      <td>...</td>\n",
+       "      <td>133.040558</td>\n",
+       "      <td>0.191835</td>\n",
+       "      <td>13.667442</td>\n",
+       "      <td>7345.375488</td>\n",
+       "      <td>134.168518</td>\n",
+       "      <td>0.193521</td>\n",
+       "      <td>182230374</td>\n",
+       "      <td>18444271275</td>\n",
+       "      <td>7430904515</td>\n",
+       "      <td>999331594</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Adj Close                                         Close  \\\n",
+       "              BNB-USD      BTC-USD     ETH-USD   XRP-USD    BNB-USD   \n",
+       "Date                                                                  \n",
+       "2019-12-31  13.727642  7193.599121  129.610855  0.192894  13.727642   \n",
+       "2020-01-01  13.689083  7200.174316  130.802002  0.192667  13.689083   \n",
+       "2020-01-02  13.027011  6985.470215  127.410179  0.188043  13.027011   \n",
+       "2020-01-03  13.660452  7344.884277  134.171707  0.193521  13.660452   \n",
+       "2020-01-04  13.891512  7410.656738  135.069366  0.194355  13.891512   \n",
+       "\n",
+       "                                                    High               ...  \\\n",
+       "                BTC-USD     ETH-USD   XRP-USD    BNB-USD      BTC-USD  ...   \n",
+       "Date                                                                   ...   \n",
+       "2019-12-31  7193.599121  129.610855  0.192894  14.095331  7335.290039  ...   \n",
+       "2020-01-01  7200.174316  130.802002  0.192667  13.873946  7254.330566  ...   \n",
+       "2020-01-02  6985.470215  127.410179  0.188043  13.715548  7212.155273  ...   \n",
+       "2020-01-03  7344.884277  134.171707  0.193521  13.763709  7413.715332  ...   \n",
+       "2020-01-04  7410.656738  135.069366  0.194355  13.921914  7427.385742  ...   \n",
+       "\n",
+       "                   Low                 Open                           \\\n",
+       "               ETH-USD   XRP-USD    BNB-USD      BTC-USD     ETH-USD   \n",
+       "Date                                                                   \n",
+       "2019-12-31  128.798157  0.189969  13.952087  7294.438965  132.612274   \n",
+       "2020-01-01  129.198288  0.192107  13.730962  7194.892090  129.630661   \n",
+       "2020-01-02  126.954910  0.186947  13.698126  7202.551270  130.820038   \n",
+       "2020-01-03  126.490021  0.185846  13.035329  6984.428711  127.411263   \n",
+       "2020-01-04  133.040558  0.191835  13.667442  7345.375488  134.168518   \n",
+       "\n",
+       "                         Volume                                        \n",
+       "             XRP-USD    BNB-USD      BTC-USD      ETH-USD     XRP-USD  \n",
+       "Date                                                                   \n",
+       "2019-12-31  0.194518  166278254  21167946112   8936866397  1116761075  \n",
+       "2020-01-01  0.192912  172980718  18565664997   7935230330  1041134003  \n",
+       "2020-01-02  0.192708  156376427  20802083465   8032709256  1085351426  \n",
+       "2020-01-03  0.187948  173683857  28111481032  10476845358  1270017043  \n",
+       "2020-01-04  0.193521  182230374  18444271275   7430904515   999331594  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list of crypto as ticker arguments\n",
+    "crypto=['BNB-USD', 'BTC-USD', 'ETH-USD', 'XRP-USD']\n",
+    "\n",
+    "data = yf.download(crypto, start='2020-01-01',end='2021-12-12')\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b5787431",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Adj Close  BNB-USD    False\n",
+       "           BTC-USD    False\n",
+       "           ETH-USD    False\n",
+       "           XRP-USD    False\n",
+       "Close      BNB-USD    False\n",
+       "           BTC-USD    False\n",
+       "           ETH-USD    False\n",
+       "           XRP-USD    False\n",
+       "High       BNB-USD    False\n",
+       "           BTC-USD    False\n",
+       "           ETH-USD    False\n",
+       "           XRP-USD    False\n",
+       "Low        BNB-USD    False\n",
+       "           BTC-USD    False\n",
+       "           ETH-USD    False\n",
+       "           XRP-USD    False\n",
+       "Open       BNB-USD    False\n",
+       "           BTC-USD    False\n",
+       "           ETH-USD    False\n",
+       "           XRP-USD    False\n",
+       "Volume     BNB-USD    False\n",
+       "           BTC-USD    False\n",
+       "           ETH-USD    False\n",
+       "           XRP-USD    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check for missing data\n",
+    "data.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b065ac",
+   "metadata": {},
+   "source": [
+    "**Feature description**\n",
+    "\n",
+    "Date: date of observation\n",
+    "\n",
+    "Open: The opening price\n",
+    "\n",
+    "High: Highest price\n",
+    "\n",
+    "Low: Lowest price\n",
+    "\n",
+    "Close: The closing price\n",
+    "\n",
+    "Adj Close: The closing price after adjustments for splits and dividend\n",
+    "\n",
+    "Volume: Total stocks traded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "feb8ac6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BNB-USD</th>\n",
+       "      <th>BTC-USD</th>\n",
+       "      <th>ETH-USD</th>\n",
+       "      <th>XRP-USD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>13.727642</td>\n",
+       "      <td>7193.599121</td>\n",
+       "      <td>129.610855</td>\n",
+       "      <td>0.192894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01</th>\n",
+       "      <td>13.689083</td>\n",
+       "      <td>7200.174316</td>\n",
+       "      <td>130.802002</td>\n",
+       "      <td>0.192667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>13.027011</td>\n",
+       "      <td>6985.470215</td>\n",
+       "      <td>127.410179</td>\n",
+       "      <td>0.188043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>13.660452</td>\n",
+       "      <td>7344.884277</td>\n",
+       "      <td>134.171707</td>\n",
+       "      <td>0.193521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-04</th>\n",
+       "      <td>13.891512</td>\n",
+       "      <td>7410.656738</td>\n",
+       "      <td>135.069366</td>\n",
+       "      <td>0.194355</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              BNB-USD      BTC-USD     ETH-USD   XRP-USD\n",
+       "Date                                                    \n",
+       "2019-12-31  13.727642  7193.599121  129.610855  0.192894\n",
+       "2020-01-01  13.689083  7200.174316  130.802002  0.192667\n",
+       "2020-01-02  13.027011  6985.470215  127.410179  0.188043\n",
+       "2020-01-03  13.660452  7344.884277  134.171707  0.193521\n",
+       "2020-01-04  13.891512  7410.656738  135.069366  0.194355"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#explo\n",
+    "adj_close=data['Adj Close']\n",
+    "adj_close.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e60839a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plotting the addjusted cloing price.\n",
+    "fig, axs = plt.subplots(2,2,figsize=(16,8),\n",
+    "                       gridspec_kw={'hspace':0.2,\n",
+    "                                   'wspace':0.1})\n",
+    "\n",
+    "axs[0,0].plot(adj_close['BNB-USD'])\n",
+    "axs[0,0].set_title('BNB')\n",
+    "axs[0,1].plot(adj_close['BTC-USD'])\n",
+    "axs[0,1].set_title('BTC')\n",
+    "axs[1,0].plot(adj_close['ETH-USD'])\n",
+    "axs[1,0].set_title('')"
+   ]
   }
  ],
  "metadata": {
